--- a/faq
+++ b/faq
@@ -1,4 +1,4 @@
-<div id="wrapper">
+<!--<div id="wrapper">-->
     <div id="faq-hero">
         <div class="main_container hero_container">
             <div class="features">
@@ -8,4 +8,4 @@
             </div>
         </div>
     </div>
-</div>
+<!--</div>-->
