--- a/faq
+++ b/faq
@@ -115,11 +115,7 @@
 			<div class="col-md-4">
 				<div class="sidebar">
 					<h3><span class="slash"></span> More Information</h3>
-					
-					<p>
-                    For more questions or information about pricing please feel free to <a href="/contact" class="contact_a">contact us</a> directly. 
-					</p>
-					
+					<p>For more questions or information about pricing please feel free to <a href="/contact" class="contact_a">contact us</a> directly.</p>
 				</div> <!-- /sidebar -->
 				
 			</div> <!-- /span4 -->
