--- a/faq
+++ b/faq
@@ -7,7 +7,7 @@
         </div>
     </div>
 </div>
-<section>
+<section class="main_content">
     <div class="inside_container">
         <div class="row">
 			<div class="col-md-8">					
