Mall Maverick 1.0  /faq

--- a/faq
+++ b/faq
@@ -7,7 +7,7 @@
         </div>
     </div>
 </div>
-<section class="main_content">
+<section>
     <div class="inside_container">
         <div class="row">
 			<div class="col-md-8">					
