--- a/faq
+++ b/faq
@@ -3,7 +3,7 @@
         <div>
             <h2 id="contact-header" class="text-center contact">Have a question?</h2>
             <p class="contact desc">If you have any question you can ask below or enter what you are looking for!</p>
-            <input type="text" name="filter-blog" class="form-control custom_form_control hero-form" placeholder="Type your search terms here" required="">
+            <!--<input type="text" name="filter-blog" class="form-control custom_form_control hero-form" placeholder="Type your search terms here" required="">-->
         </div>
     </div>
 </section>
