--- a/faq
+++ b/faq
@@ -112,13 +112,21 @@
 				
 			</div> <!-- /span8 -->
 			
-			<div class="col-md-4">
-				<div class="sidebar">
-					<h3><span class="slash"></span> More Information</h3>
-					<p>For more questions or information about pricing please feel free to <a href="/contact" class="contact_a">contact us</a> directly.</p>
+			<!--<div class="col-sm-4">-->
+			<!--	<div class="sidebar">-->
+			<!--		<h3><span class="slash"></span> More Information</h3>-->
+			<!--		<p>For more questions or information about pricing please feel free to <a href="/contact" class="contact_a">contact us</a> directly.</p>-->
 				</div> <!-- /sidebar -->
 				
 			</div> <!-- /span4 -->
+			
+			
+			<div class ="col-sm-4">
+                <div class="contact_special_heading more_info">
+                    <p class="desc more_info_header">More Information</p>
+                    <p>For more questions or information about pricing please feel free to <a href="/contact" class="contact_a">contact us</a> directly.</p>
+                </div>
+            </div>
 		</div> <!-- /row --> 
 </section>
 
