--- a/faq
+++ b/faq
@@ -8,7 +8,7 @@
     </div>
 </section>
 <section>
-    <div class="inside_container">
+    <main class="inside_container">
         <div class="row">
 			<div class="col-md-8">					
 					<h3 style="padding-top:0px;"><span class="slash"></span> Search...</h3>
@@ -110,23 +110,15 @@
 					</ol>
 					
 				
-			</div> <!-- /span8 -->
+			</main> <!-- /span8 -->
 			
-			<!--<div class="col-sm-4">-->
-			<!--	<div class="sidebar">-->
-			<!--		<h3><span class="slash"></span> More Information</h3>-->
-			<!--		<p>For more questions or information about pricing please feel free to <a href="/contact" class="contact_a">contact us</a> directly.</p>-->
+			<aside class="col-md-4">
+				<div class="sidebar">
+					<h3><span class="slash"></span> More Information</h3>
+					<p>For more questions or information about pricing please feel free to <a href="/contact" class="contact_a">contact us</a> directly.</p>
 				</div> <!-- /sidebar -->
 				
-			</div> <!-- /span4 -->
-			
-			
-			<div class ="col-sm-4">
-                <div class="contact_special_heading more_info">
-                    <p class="desc more_info_header">More Information</p>
-                    <p>For more questions or information about pricing please feel free to <a href="/contact" class="contact_a">contact us</a> directly.</p>
-                </div>
-            </div>
+			</aside> <!-- /span4 -->
 		</div> <!-- /row --> 
 </section>
 
