--- a/faq
+++ b/faq
@@ -8,9 +8,9 @@
     </div>
 </section>
 <section>
-    <main class="inside_container">
+    <div class="inside_container">
         <div class="row">
-			<div class="col-md-8">					
+			<main class="col-md-8">					
 					<h3 style="padding-top:0px;"><span class="slash"></span> Search...</h3>
 					
 					<ol class="faq-list">
