--- a/faq
+++ b/faq
@@ -113,7 +113,7 @@
 			</main> <!-- /span8 -->
 			
 			<aside class="col-md-4">
-				<div class="sidebar">
+				<div class="features_container">
 					<h4>More Information</h4>
 					<p>For more questions or information about pricing please feel free to <a href="/contact" class="contact_a">contact us</a> directly.</p>
 				</div> <!-- /sidebar -->
