Mall Maverick 1.0  /faq

--- a/faq
+++ b/faq
@@ -10,7 +10,7 @@
 <section class="main_content">
     <div class="inside_container">
         <div class="row">
-			<main class="col-md-8" class="content_background">					
+			<main class="col-md-8 content_background">					
 					<h3 style="padding-top:0px;"><span class="slash"></span> Search...</h3>
 					
 					<ol class="faq-list">
