Mall Maverick 1.0  /faq

--- a/faq
+++ b/faq
@@ -115,7 +115,7 @@
 			<aside class="col-md-4">
 				<div class="features_container">
 					<h4>More Information</h4>
-					<p>For more questions or information about pricing please feel free to <a href="/contact" class="contact_a">contact us</a> directly.</p>
+					<p>If you have more questions or would like information about our pricing, please feel free to <a href="/contact" class="contact_a">contact us</a> directly.</p>
 				</div> <!-- /sidebar -->
 			</aside>
 		</div> <!-- /row --> 
