--- a/faq
+++ b/faq
@@ -1,3 +1,154 @@
+<style>
+    .faq-search {
+    margin-bottom: 2em;
+	
+	text-align: right;
+}
+
+.faq-search input {
+	width: 96%;
+	display: block;
+	padding: 1%;
+}
+
+
+
+.faq-empty {
+	display: none;
+}
+
+
+
+.faq-toc {
+	padding: 1.5em 0;
+	margin: 2em 0 0;
+	
+	border: 1px dotted #CCC;
+	border-right: none;
+	border-left: none;
+    
+}
+
+.faq-toc ol {
+	padding: 0;
+	margin: 0;
+}
+
+.faq-toc li {
+	margin-bottom: .75em;
+	font-size: 13px;
+	list-style: none;
+}
+
+.faq-toc a {
+	margin-left: .5em;
+    color: #0088CC;
+}
+
+
+
+.faq-list {
+	padding: 0;
+	margin: 3em 0 0;
+	
+	list-style: none;	
+}
+
+.faq-list li {
+	display: table;
+	margin-bottom: 2em;
+}
+
+.faq-icon {
+	display: table-cell;
+	padding-right: 1.25em;
+	vertical-align: top;
+}
+
+.faq-text {
+	display: table-cell;
+	vertical-align: top;
+	
+}
+						
+.faq-circle-icon {
+	width: 38px;
+	height: 38px;
+	
+	background: #999;
+}
+
+.faq-circle-icon div {
+	display: table-cell;
+	width: 32px;
+	height: 32px;
+	margin-top: -16px;
+	margin-left: -16px;
+	
+	font-size: 14px;
+	font-weight: 600;
+	line-height: 28px;
+	color: #FFF;	
+	font-family: open_sans;
+    
+	border-color: #FFF;
+	
+	text-shadow: 1px 1px 2px rgba(0,0,0,.35);	
+}
+
+.sidebar {
+    background: none repeat scroll 0 0 #EEEEEE;
+    border-radius: 5px 5px 5px 5px;
+    padding: 15px;
+}
+
+a.contact_a:link {
+    text-decoration: underline;
+}
+
+.input-xlarge{
+    width: 98%;
+}
+#message{
+    width: 99%;
+}
+
+@media (max-width: 767px) {
+    .number_header{
+        font-size: 4.3em;
+    }
+    #mm_stats{
+        padding: 100px 0;
+    }
+    #mm_stats .row-fluid [class*="span"]:first-child{
+        margin-bottom:60px;
+        border-right:0
+    }
+    .custom_slider_container{
+        position:relative !important;
+        right:0;
+        top:50%;
+        -webkit-transform: translateY(0%);
+        -moz-transform: translateY(0%);
+        -ms-transform: translateY(0%);
+        -o-transform: translateY(0%);
+        transform: translateY(0%);
+    }
+    #screenshots .span4{
+        margin-bottom: 30px;
+    }
+    .slogan_header{
+        font-size:30px;
+        padding-top:0;
+    }
+    .slogan_desc{
+        width:100%;
+    }
+    .actions button{
+        float:none;   
+    }
+}
+</style>
 <section class="page_banner">
     <div class="main_container hero_container">
         <div>
