--- a/faq
+++ b/faq
@@ -303,7 +303,7 @@
             	enableToc: true,
             	enableStyling: true,
                 //numberHtml: '{{#}}.',
-                numberHtml: '<div class="circle-icon faq-circle-icon">#</div>'
+                numberHtml: '<div class="circle-icon faq-circle-icon"><span>#</span></div>'
             };
             /**
              * Merge the runtime options with the default settings
