--- a/faq
+++ b/faq
@@ -74,7 +74,8 @@
 .faq-circle-icon {
 	width: 38px;
 	height: 38px;
-	
+	border-radius: 50%;
+	border: 2px solid #FFBE1D;
 	background: #999;
 }
 
@@ -92,8 +93,6 @@
 	font-family: "Open Sans";
     
 	border-color: #FFF;
-	
-	text-shadow: 1px 1px 2px rgba(0,0,0,.35);	
 }
 
 .sidebar {
