--- a/faq
+++ b/faq
@@ -74,6 +74,7 @@
 .faq-circle-icon {
 	width: 38px;
 	height: 38px;
+	display: flex;
 	border-radius: 50%;
 	border: 2px solid #FFBE1D;
 	background: #999;
