--- a/faq
+++ b/faq
@@ -74,7 +74,10 @@
 .faq-circle-icon {
 	width: 38px;
 	height: 38px;
-	display: flex;
+	    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 	border-radius: 50%;
 	border: 2px solid #FFBE1D;
 	background: #999;
@@ -87,7 +90,7 @@
 	/*margin-top: -16px;*/
 	/*margin-left: -16px;*/
 	
-	font-size: 28px;
+	font-size: 24px;
 	font-weight: 600;
 	line-height: 28px;
 	color: #FFBE1D;	
