--- a/faq
+++ b/faq
@@ -1,7 +1,6 @@
 <style>
-    .faq-search {
+.faq-search {
     margin-bottom: 2em;
-	
 	text-align: right;
 }
 
@@ -11,22 +10,16 @@
 	padding: 1%;
 }
 
-
-
 .faq-empty {
 	display: none;
 }
 
-
-
 .faq-toc {
 	padding: 1.5em 0;
 	margin: 2em 0 0;
-	
 	border: 1px dotted #CCC;
 	border-right: none;
 	border-left: none;
-    
 }
 
 .faq-toc ol {
@@ -46,12 +39,9 @@
     font-size: 14px;
 }
 
-
-
 .faq-list {
 	padding: 0;
 	margin: 3em 0 0;
-	
 	list-style: none;	
 }
 
@@ -69,7 +59,6 @@
 .faq-text {
 	display: table-cell;
 	vertical-align: top;
-	
 }
 						
 .faq-circle-icon {
@@ -96,11 +85,10 @@
     padding: 15px;
 }
 
-
-
 .input-xlarge{
     width: 98%;
-}
+} 
+
 #message{
     width: 99%;
 }
@@ -296,7 +284,7 @@
                 enableSearch: true,
             	enableToc: true,
             	enableStyling: true,
-                //numberHtml: '{{#}}.',
+                numberHtml: '{{#}}.',
                 numberHtml: '<div class="circle-icon faq-circle-icon"><div>#</div></div>'
             };
             /**
