Mall Maverick 1.0  /faq

--- a/faq
+++ b/faq
@@ -284,7 +284,7 @@
                 enableSearch: true,
             	enableToc: true,
             	enableStyling: true,
-                numberHtml: '{{#}}.',
+                // numberHtml: '{{#}}.',
                 numberHtml: '<div class="circle-icon faq-circle-icon"><div>#</div></div>'
             };
             /**
