--- a/faq
+++ b/faq
@@ -273,13 +273,9 @@
      * Create an anonymous function to avoid library conflicts
      */
     (function($) {
-        /**
-         * Add our plugin to the jQuery.fn object
-         */
+        // Add our plugin to the jQuery.fn object
         $.fn.goFaq = function(options) {
-            /**
-             * Define some default settings
-             */
+            // Define some default settings
             var defaults = {
                 enableSearch: true,
             	enableToc: true,
@@ -287,20 +283,14 @@
                 // numberHtml: '{{#}}.',
                 numberHtml: '<div class="circle-icon faq-circle-icon"><div>#</div></div>'
             };
-            /**
-             * Merge the runtime options with the default settings
+            // Merge the runtime options with the default settings
              */
             var options = $.extend({}, defaults, options);
-            /**
-             * Iterate through the collection of elements and
-             * return the object to preserve method chaining
-             */
+            // Iterate through the collection of elements and return the object to preserve method chaining
+
             return this.each(function(i) {
-                /**
-                 * Wrap the current element in an instance of jQuery
-                 */
+            // Wrap the current element in an instance of jQuery
                 var $this = $(this);
-                
                 var $container = $this.wrap ('<div class="faq-container"></div>');
                 
                 $this.addClass ('faq-list');
