--- a/faq
+++ b/faq
@@ -1,132 +1,40 @@
 <style>
-.faq-search {
-    margin-bottom: 2em;
-	text-align: right;
-}
 
-.faq-search input {
-	width: 96%;
-	display: block;
-	padding: 1%;
-}
-
-.faq-empty {
-	display: none;
-}
-
-.faq-toc {
-	padding: 1.5em 0;
-	margin: 2em 0 0;
-	border: 1px dotted #CCC;
-	border-right: none;
-	border-left: none;
-}
-
-.faq-toc ol {
-	padding: 0;
-	margin: 0;
-}
-
-.faq-toc li {
-	margin-bottom: .75em;
-	font-size: 13px;
-	list-style: none;
-}
-
-.faq-toc a {
-	margin-left: .5em;
-    color: #ffbe1d;
-    font-size: 14px;
-}
-
-.faq-list {
-	padding: 0;
-	margin: 3em 0 0;
-	list-style: none;	
-}
-
-.faq-list li {
-	display: table;
-	margin-bottom: 2em;
-}
-
-.faq-icon {
-	display: table-cell;
-	padding-right: 1.25em;
-	vertical-align: top;
-}
-
-.faq-text {
-	display: table-cell;
-	vertical-align: top;
-}
-						
-.faq-circle-icon {
-	width: 38px;
-	height: 38px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-	border-radius: 50%;
-	border: 2px solid #FFBE1D;
-}
-
-.faq-circle-icon div {
-	font-size: 21px;
-	font-weight: 600;
-	line-height: 28px;
-	color: #FFBE1D;	
-	font-family: "Open Sans";
-}
-
-.sidebar {
-    background: none repeat scroll 0 0 #EEEEEE;
-    border-radius: 5px 5px 5px 5px;
-    padding: 15px;
-}
-
-.input-xlarge{
-    width: 98%;
-} 
-
-#message{
-    width: 99%;
-}
 
 @media (max-width: 767px) {
-    .number_header{
-        font-size: 4.3em;
-    }
-    #mm_stats{
-        padding: 100px 0;
-    }
-    #mm_stats .row-fluid [class*="span"]:first-child{
-        margin-bottom:60px;
-        border-right:0
-    }
-    .custom_slider_container{
-        position:relative !important;
-        right:0;
-        top:50%;
-        -webkit-transform: translateY(0%);
-        -moz-transform: translateY(0%);
-        -ms-transform: translateY(0%);
-        -o-transform: translateY(0%);
-        transform: translateY(0%);
-    }
-    #screenshots .span4{
-        margin-bottom: 30px;
-    }
-    .slogan_header{
-        font-size:30px;
-        padding-top:0;
-    }
-    .slogan_desc{
-        width:100%;
-    }
-    .actions button{
-        float:none;   
-    }
+    /*.number_header{*/
+    /*    font-size: 4.3em;*/
+    /*}*/
+    /*#mm_stats{*/
+    /*    padding: 100px 0;*/
+    /*}*/
+    /*#mm_stats .row-fluid [class*="span"]:first-child{*/
+    /*    margin-bottom:60px;*/
+    /*    border-right:0*/
+    /*}*/
+    /*.custom_slider_container{*/
+    /*    position:relative !important;*/
+    /*    right:0;*/
+    /*    top:50%;*/
+    /*    -webkit-transform: translateY(0%);*/
+    /*    -moz-transform: translateY(0%);*/
+    /*    -ms-transform: translateY(0%);*/
+    /*    -o-transform: translateY(0%);*/
+    /*    transform: translateY(0%);*/
+    /*}*/
+    /*#screenshots .span4{*/
+    /*    margin-bottom: 30px;*/
+    /*}*/
+    /*.slogan_header{*/
+    /*    font-size:30px;*/
+    /*    padding-top:0;*/
+    /*}*/
+    /*.slogan_desc{*/
+    /*    width:100%;*/
+    /*}*/
+    /*.actions button{*/
+    /*    float:none;   */
+    /*}*/
 }
 </style>
 <section class="page_banner">
