--- a/faq
+++ b/faq
@@ -273,7 +273,7 @@
     })
     
     $(function () {
-        $("a").find("a[href*=#]:not([href=#])").click(function () {
+        $(".faq-toc a").find("a[href*=#]:not([href=#])").click(function () {
             var offset = 200;
             var speed = 1000;
             var target = $(this.hash);
